--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,21 +1,16 @@
 .nav{
     display: flex;
     width: 100vw;
-    height:9%;
+    height:80px;
     justify-content: space-between;
     color:white;
     padding: 2vh 3vw;
     border-bottom: 2px solid white ;
 }
-.logo{
-    font-size: 1.3em;
-    padding-bottom:1vh;
-    font-weight: 600;
-}
 .nav2{
     position: relative;
     width: 38vw;
-    height:100%;
+    height:50px;
     background-color: #222;
     border-radius: 8px;
     display: flex;
