--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+     margin-top: 20px;
     /* background: linear-gradient(#219780,#ef8923,#E3867D);  */
     }
     
