--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -56,34 +56,50 @@
 font-size: 1.6vw;
 display: none;
 }
+.slidebar{
+    display: none;
+}
 @media (max-width:600px) {
     .nav{
         background-color: #E3867D;
         color:#222;
-        /* padding: 0 5vw; */
     }
-        .nav h1{
+    .nav h1{
         font-size:6vw;
     }
-    /* .nav1 .nav2{
-        font-size: 4vw;
+    .nav2{
         display: none;
-    } */
-    .menu{
-        display: initial;
-       font-size: 6vw;
     }
-    .nav1 .nav2 {
-        font-size: 4vw;
-        position: absolute;
-        top: 70px;
-        left:0;
+    .menu{
+    display: initial;
+    font-size: 6vw;
+    }
+    .slidebar.open{
+        position: fixed;
+        top: 0;
         right: 0;
+        height: 100vh;
+        width:50vw;
+        z-index:999;
+        background-color: #bb7d7785;
+        backdrop-filter: blur(10px);
+        box-shadow: -10px 0 10px rgba(0,0,0,0.1);
+        display: flex;
         flex-direction: column;
-        align-items: center;
-        text-align: center;
-        background: #E3867D;
-        gap: 0;
-        overflow: hidden;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding: 2% 2% ;
+    }
+    /* .slidebar {
+        right: 0;
+    } */
+    .slidebar.open a{
+        width: 100%;
+        height: 10vh;
+        font-size: large;
+        text-decoration: none;
+        color: #000000;
+        padding: 10% 10%;
+        
     }
 }
